--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -116,5 +116,12 @@
     <div>
         <p> This information was taken from <a href="https://en.wikipedia.org/wiki/Bon_Iver_(album)">Wikipedia: </a></p>
     </div>
-
+    
+    <div>
+        <h2>See also...</h2>
+        <ul>
+            <li><a href = "https://guywithhat99.github.io/wa/wa3.html" > guywithhat99's encyclopedia </a></li>
+            <li><a href = "https://killthecreep.github.io/wa/wa3.html"> killthecreep's encyclopedia</a></li>
+        </ul>
+    </div>
 </body>
