--- a/ica/ica3a.html
+++ b/ica/ica3a.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/ica/ica3a.html">
+    <link rel="stylesheet" href="/css/ica3a.css">
 </head>
 <body>
     <div class = "sender-column">
