--- a/class notes/wk_6.html
+++ b/class notes/wk_6.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <section>
-        <div>
+        <div id="first_div">
             <h1>Welcome to Week 6: CSS 2</h1>
             <p>This week we are exploring the box method, and how we can use position to move stuff around on our page.</p>
             <p class="purple">We are also explorng responsiveness and how we can use special units (VW/VH) to adjust the size of our content to the size of our device</p>
