--- a/wa/index.html
+++ b/wa/index.html
@@ -10,10 +10,10 @@
   </head>
 
   <body>
-    <h1>Image gallery example</h1>
+    <h1>Janky Slide Show of (some of the) Arrested Delevopment Characters</h1>
 
     <div class="full-img">
-      <img class="displayed-img" src="../img/dog1.JPG" alt="dog">
+      <img class="displayed-img" src="../img/AD1.jpg" alt="arrested development cast">
       <div class="overlay"></div>
       <button class="dark">Darken</button>
     </div>
