lots of stuff!!

--- a/final/landing.html
+++ b/final/landing.html
@@ -12,8 +12,11 @@
 
     </section>
     <div id="buttons">
-        <button type="button" value="participatory">Participatory Projects</button>
-        <button type="button" value="toolkit">Toolkit Projects</button>
+        <button type="button" value="oil painting">Oil Paintings</button>
+        <button type="button" value="graphite">Graphite Drawings</button>
+        <button type="button" value="oil pastel">Oil Pastel Drawings</button>
+        <button type="button" value="colored pencil">Colored Pencil Drawings</button>
+        <button type="button" value="2024">Works from this Year</button>
         <button type="button" value="clear">Clear</button>
     </div>
 
