--- a/final/self_portrait.html
+++ b/final/self_portrait.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../final/subpages.css">
 </head>
 <body>
-    <section id="slideshow">
-
-    </section>
     <section id="project">
 
     </section>
+    <section id="images">
+        <img src = "../final/img/mainimage (8).png">
+        <img src = "../final/img/self_portrait (1).png">
+        <img src = "../final/img/self_portrait (2).png">
+        <img src = "../final/img/self_portrait (3).png">
+    </section>
+    
 <script src="../final/prj3_2.js"></script>
 </body>
 </html>
