--- a/final/me_and_my_dog.html
+++ b/final/me_and_my_dog.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../final/subpages.css">
 </head>
 <body>
-    <section id="slideshow">
-
-    </section>
     <section id="project">
 
     </section>
+    <section id="images">
+        <img src = "../final/img/mainimage (4).png">
+        <img src = "../final/img/dog.png">
+    </section>
+    
 <script src="../final/prj3_2.js"></script>
 </body>
 </html>
