--- a/final/the_days_leftovers.html
+++ b/final/the_days_leftovers.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../final/subpages.css">
 </head>
 <body>
-    <section id="slideshow">
-
-    </section>
     <section id="project">
 
     </section>
+    <section id="images">
+        <img src = "../final/img/mainimage (5).png">
+        <img src = "../final/img/days (1).png">
+        <img src = "../final/img/days (2).png">
+        <img src = "../final/img/days (3).png">
+        <img src = "../final/img/days (4).png">
+        <img src = "../final/img/days (5).png">
+        <img src = "../final/img/days (6).png">
+        <img src = "../final/img/days (7).png">
+        <img src = "../final/img/days (8).png">
+    </section>
+    
 <script src="../final/prj3_2.js"></script>
 </body>
 </html>
