--- a/wa/wa11.html
+++ b/wa/wa11.html
@@ -13,7 +13,7 @@
     <h1>Janky Slide Show of (some of the) Arrested Delevopment Characters</h1>
 
     <div class="full-img">
-      <img class="displayed-img" src="../img/AD1.jpg" alt="arrested development cast">
+      <img class="displayed-img" src="../final/img/mainimage (5).png" >
       <div class="overlay"></div>
       <button class="dark">Darken</button>
     </div>
