--- a/final/contact_series.html
+++ b/final/contact_series.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../final/subpages.css">
+    <title>Jane Strode</title>
+    <link rel="stylesheet" href="../final/prj3_2.css">
 </head>
+
 <body>
+    <header>
+        <div class="navbar">
+            <div class="logo-title">
+                <a href ="https://www.instagram.com/janemelyn_/?hl=en"><img src="../final/img/Instagram_logo.png" alt="Logo" class="navbar-logo"></a>
+                <h1></h1>
+            </div>
+            
+            <div class="nav-buttons">
+                <a href="../final/landing.html" class="nav-btn">Home</a>
+            </div>
+        </div>
+    </header>
     <section id="project">
 
     </section>
