--- a/final/whos_skin.html
+++ b/final/whos_skin.html
@@ -3,14 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jane Strode</title>
+    <link rel="stylesheet" href="../final/prj3_2.css">
 </head>
 <body>
-    <section id="slideshow">
-
-    </section>
+    <header>
+        <div class="navbar">
+            <div class="logo-title">
+                <a href ="https://www.instagram.com/janemelyn_/?hl=en"><img src="../final/img/Instagram_logo.png" alt="Logo" class="navbar-logo"></a>
+                <h1></h1>
+            </div>
+            
+            <div class="nav-buttons">
+                <a href="../final/landing.html" class="nav-btn">Home</a>
+            </div>
+        </div>
+    </header>
     <section id="project">
 
+    </section>
+    <section id="images">
+        <img src = "../final/img/mainimage (6).png">
+        <img src = "../final/img/whos_skin.png">
     </section>
 <script src="../final/prj3_2.js"></script>
 </body>
